--- a/assets/scss/organisms/pages/_addons.scss
+++ b/assets/scss/organisms/pages/_addons.scss
@@ -60,6 +60,7 @@
 			right: 27px;
 			transform: translate3d(0, -50%, 0);
 			transition: 0.2s ease-in-out;
+			text-align: center;
 			
 			&.valid, &.invalid, &.inactive, &.coming-soon {
 				opacity: 1;
@@ -116,6 +117,21 @@
 			&.coming-soon {
 				background-color: lighten($primary, 10%);
 				right: 0;
+			}
+			
+			.remove-key {
+				vertical-align: text-top;
+				margin-left: 5px;
+				font-size: 14px;
+				
+				&:focus {
+					box-shadow: none;
+					outline: none;
+				}
+				
+				&:hover {
+					color: $danger;
+				}
 			}
 			
 		}
